<resources>
    <string name="app_name">Blood Sugar Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="purge_database">Purge Database</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>
    <string name="avg">AVG</string>
    <string name="title">Blood Sugar Reading</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="submitBtn">Submit</string>
    <string name="date_btn_text">SELECT DATE</string>
    <string name="time_btn_text">SELECT TIME</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="_24hr_time">24HR TIME</string>
    <string name="app_settings">Global Settings</string>
    <string name="purgeDB">purgeDB</string>
    <string name="purge_summary">Reset all blood sugar reading(BE CAREFUL)</string>
    <string name="ui_changes">Display Changes</string>
    <string name="change24HR">change24hrs</string>
    <string name="summary_24_hours">Switch between 24hr and normal time</string>
    <string name="bst_preferences">Preferences</string>
    <string name="bst_app_summary">Change App Settings</string>
    <string name="app_about_settings">About</string>
    <string name="app_about_summary">More Information about this app</string>
    <string name="purge_db_warning">ARE YOU SURE YOU WANT TO DELETE YOUR READINGS?</string>
    <string name="debug_settings">Debug Settings</string>
    <string name="debug_options">Debug Options</string>
    <string name="title_activity_debug_settings">Debug Options</string>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="title_activity_debug_setting">Debug Options</string>
</resources>
