<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lokislayer.bloodsugartracker.MainActivity"
    tools:showIn="@layout/activity_main">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:background="#1976d2"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:id="@+id/gridLayout">

        <TextView
            android:text="@string/amount"
            android:textSize="18sp"
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:textColor="@color/abc_primary_text_material_dark" />
        <EditText
            android:layout_columnSpan="2"
            android:ems="4"
            android:inputType="numberSigned"
            android:id="@+id/bloodAmount"
            android:textColor="@color/abc_primary_text_material_dark" />
        <TextView
            android:text="@string/date"
            android:textSize="18sp"
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:textColor="@color/abc_primary_text_material_dark" />
        <Button
            android:text="@string/date_btn_text"
            android:layout_columnSpan="2"
            android:id="@+id/dateEnteredBtn"
            android:background="@drawable/rounded_normal_button"
            android:padding="10dp"
            android:textColor="@color/abc_primary_text_material_dark" />
        <TextView
            android:text="@string/time"
            android:textSize="18sp"
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:textColor="@color/abc_primary_text_material_dark" />
        <Button
            android:layout_columnSpan="2"
            android:id="@+id/timeEnteredBtn"
            android:text="@string/time_btn_text"
            android:background="@drawable/rounded_normal_button"
            android:padding="10dp"
            android:textColor="@color/abc_primary_text_material_dark" />
        <Button
            android:layout_row="4"
            android:layout_column="0"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/submitBtn"
            android:id="@+id/submitResult"
            android:padding="15dp"
            android:background="@drawable/rounded_submit_button"
            android:layout_columnSpan="3" />
    </GridLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2sp"
        android:paddingBottom="10sp"
        android:layout_below="@+id/gridLayout"
        android:layout_alignStart="@+id/gridLayout">
        <TableRow
            android:layout_height="match_parent"
            android:layout_width="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#dcdcdc"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/min"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#d3d3d3"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/avg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#cac9c9"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/max"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#dcdcdc"
                android:textAlignment="center"
                android:textSize="20sp"
                android:id="@+id/minValue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#d3d3d3"
                android:textAlignment="center"
                android:textSize="20sp"
                android:id="@+id/avgValue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#cac9c9"
                android:id="@+id/maxValue"
                android:textAlignment="center"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
